Issue #1701652 by dudenhofer: Fixing Help alignment, filter select color, & vertical alignment of bulk options apply button
Reviewed-on: https://code.drupalcommerce.org/329
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_admin/contrib.css
+++ b/themes/commerce_kickstart_admin/contrib.css
@@ -878,7 +878,7 @@ div.views-megarow-content .megarow-header .megarow-title {
   position: relative;
 }
 .page-admin-commerce-products #commerce-kickstart-inline-help-button #edit-commerce-kickstart-inline-help-button {
-  margin-top: 10px;
+  margin: 10px 0 0;
   position: absolute;
   right: 0;
   top: 100%;
@@ -1185,19 +1185,17 @@ html.js .views-exposed-form .form-item input.throbbing {
 }
 .vbo-views-form #edit-select .fieldset-wrapper {
   padding: 3px 0 0 16px;
-  position: relative;
-  width: 220px;
+  width: auto;
 }
 .vbo-views-form #edit-select .fieldset-wrapper input.form-submit {
-  left: 100%;
-  position: absolute;
-  top: 9px;
+  float: left;
+  margin-top: 9px;
+  padding: 4px 10px;
 }
 .vbo-views-form .form-item-operation {
   background: transparent url("images/bg-vbo.png") no-repeat 0 0;
-  display: block;
-  padding: 0 5px 0 30px;
-  width: 200px;
+  float: left;
+  padding: 0 10px 0 30px;
 }
 .vbo-views-form .form-item-operation #edit-operation {
   margin-top: 0;
@@ -1278,7 +1276,9 @@ html.js .vbo-views-form #edit-select fieldset .fieldset-wrapper{
   background: #fff url("images/drop-filter-up.png") no-repeat right center;
 }
 .chzn-container-single .chzn-single span {
+  color: #999;
   margin-right: 29px;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 .views-widget-filter-status .chzn-search,
 .view-commerce-backoffice-products .vbo-views-form .fieldset-wrapper .chzn-drop .chzn-search {
